# optimum_interval

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  EXPLANATION.md  LICENSE  README.rst  TUTORIAL.md  cmax.html  cmax.ipynb  cmax.py  cmax.tex  commit.sh  mkdocs.yml  pyproject.toml  reproduce_figures.py
.github/workflows/: ci.yml  release.yml
docs/: api.md  explanation.md  hooks.py  index.md  scanning.md  tutorial.md  uhdm.md
docs/javascripts/: mathjax.js
examples/: TUTORIAL.md  TUTORIAL_UHDM.md  dark_matter_exclusion.py  tutorial.py  uhdm_finite_range.ipynb  uhdm_momentum_kicks.py  upper_limit.py
scripts/: build_tables.py
src/optimum_interval/: __init__.py  analytic.py  comparison.py  intervals.py  montecarlo.py  plotting.py  scanning.py  spectra.py
tests/: test_analytic.py  test_build_tables.py  test_comparison.py  test_coverage.py  test_examples.py  test_figures_regression.py  test_intervals.py  test_montecarlo.py  test_plotting.py  test_properties.py  test_scanning.py  test_spectra.py  test_tutorial.py
