[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "optimum-interval"
version = "0.1.0"
description = "Yellin optimum-interval upper limits in the presence of unknown background"
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jelle Aalbers" },
    { name = "Christopher Tunnell" },
]
keywords = ["statistics", "upper limit", "dark matter", "confidence interval", "Yellin"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Paper = "https://arxiv.org/abs/physics/0203002"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
